k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-tarefas-familia
  namespace: api-tarefas
  labels:
    app: api-tarefas-familia
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: api-tarefas-familia
